--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="utf-8">
-	<title>1942 Game</title>
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="./assets/js/app.js" type="application/js"></script>
+    <meta charset="utf-8">
+    <title>1942 Game</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/app.js" type="application/javascript"></script>
   </head>
   <body>
-	<div id="container">
-	  <div id="hero"></div>
-	  <div id="enemies">
-		<div class="enemy-1"></div>
-		<div class="enemy-1"></div>
-		<div class="enemy-1"></div>
-		<div class="enemy-1"></div>
-	  </div>
-	  <div id="bullets">
-		<div class="bullet"></div>
-		<div class="bullet"></div>
-		<div class="bullet"></div>
-		<div class="bullet"></div>
-	  </div>
-	  <div id="score"></div>
-	</div>
+    <div id="container">
+      <div id="hero"></div>
+      <div id="enemies"></div>
+      <div id="bullets">
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+      </div>
+      <div id="score"></div>
+    </div>
   </body>
 </html>
