--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="hero"></div>
+      <div id="heroes"></div>
       <div id="enemies"></div>
-      <div id="bullets">
-        <div class="bullet"></div>
-        <div class="bullet"></div>
-        <div class="bullet"></div>
-        <div class="bullet"></div>
-      </div>
+      <div id="bullets"></div>
       <div id="score"></div>
     </div>
   </body>
