Beginning prototyping collision animation and element

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <title>1942 Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/models/bullet.js" type="application/javascript"></script>
+    <script src="./assets/js/models/enemy.js" type="application/javascript"></script>
+    <script src="./assets/js/models/hero.js" type="application/javascript"></script>
+    <script src="./assets/js/controllers/game.js" type="application/javascript"></script>
     <script src="./assets/js/app.js" type="application/javascript"></script>
   </head>
   <body>
     <div id="container">
+      <collision_0></collision_0>
       <div id="heroes"></div>
       <div id="enemies"></div>
       <div id="bullets"></div>
