--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>1942 Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="./assets/js/models/bullet.js" type="application/javascript"></script>
     <script src="./assets/js/models/enemy.js" type="application/javascript"></script>
     <script src="./assets/js/models/hero.js" type="application/javascript"></script>
