--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>1942 Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="./assets/js/models/collision.js" type="application/javascript"></script>
     <script src="./assets/js/models/bullet.js" type="application/javascript"></script>
     <script src="./assets/js/models/enemy.js" type="application/javascript"></script>
     <script src="./assets/js/models/hero.js" type="application/javascript"></script>
